# Pulse24Sync

./: .gitignore  ACKNOWLEDGMENTS.md  ARCHITECTURE.md  BUILD_CACHING.md  BUILD_CLEANUP_GUIDE.md  BUILD_ISSUES.md  BUILD_OPTIMIZATION_GUIDE.md  BUILD_SERVICES.md  CACHING_OPTIMIZATIONS.md  CMakeLists.txt  CONTRIBUTING.md  DEPENDENCY_CACHING.md  Dockerfile  Dockerfile.debug  GITHUB_ACTIONS_CODESIGNING.md  GITHUB_WORKFLOW_UPDATES.md  INSTALLATION.md  LINUX_BUILD_GUIDE.md  MACOS_CODE_SIGNING_GUIDE.md  NOTARIZATION_SETUP.md  Pulse24Sync.jucer  README.md  ROBUSTNESS_GUIDE.md  SELF_HOSTED_RUNNER_SETUP.md  WINDOWS_BUILD_GUIDE.md  WINDOWS_BUILD_SIZE_FIX.md  build-docker-debug.sh  build-docker.sh  build.sh  build_macos.sh  build_windows.bat  cleanup-build.sh  create-github-release.sh  create-macos-distribution.sh  create-release-api.sh  create-release.sh  create-windows-distribution.bat  debug-notarization.sh  docker-compose.yml  entitlements.plist  (+7 more)
.cursor/rules/: build-artifacts.mdc  build-scripts.mdc  code-quality.mdc  project-structure.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/releases/: v1.0.0-beta.1.md
.github/workflows/: badge-status.yml  build.yml  pr-check.yml  release.yml  test-minimal.yml  test-simple.yml  test.yml
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/VisualStudio2022/: resources.rc
Source/: AbletonLinkWrapper.cpp  AbletonLinkWrapper.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PulseGenerator.cpp  PulseGenerator.h
docs/: CI_TROUBLESHOOTING.md  TESTING.md
releases/v1.0.0-beta.1/: release-notes-v1.0.0-beta.1.md
src/: README.md  main.cpp  platformio.ini
tests/: CMakeLists.txt  JuceStubs.h  PluginProcessorTests.cpp  PulseGeneratorTests.cpp  TestMain.cpp  TestUtils.cpp  TestUtils.h
